# adguard-tray

./: .SRCINFO  .gitignore  PKGBUILD  README.md  adguard-tray.desktop  adguard-tray.py  install.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: release.yml
adguard_tray/: __init__.py  cli.py  config.py  config_tab.py  diagnostics_tab.py  dns_filters_tab.py  exceptions_tab.py  filters_dialog.py  filters_tab.py  i18n.py  icons.py  main.py  manager_window.py  notifications.py  overview_tab.py  settings_dialog.py  tray.py  userscripts_dialog.py  userscripts_tab.py  worker.py
contrib/adguard-cli-upstream-bin/: PKGBUILD
